{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 32,
  "lineage": "6aec9feb-cdf1-b0aa-e285-eb2c03b85e0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-0fef6db1302035beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0fef6db1302035beb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Default subnet for eu-west-2b"
            },
            "tags_all": {
              "Name": "Default subnet for eu-west-2b"
            },
            "vpc_id": "vpc-02184bb5944b5845b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:vpc/vpc-02184bb5944b5845b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01c51e512cc2b5ba0",
            "default_route_table_id": "rtb-06a3c9246d8626d0d",
            "default_security_group_id": "sg-0cf77e7def5f01606",
            "dhcp_options_id": "dopt-0bd797b99b4ae1991",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-02184bb5944b5845b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a3c9246d8626d0d",
            "owner_id": "111644099040",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb46f888200e84d",
            "arn": "arn:aws:ec2:eu-west-2:111644099040:instance/i-024625c4656c67709",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024625c4656c67709",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sherlihy_dot_com-demo_instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080345b2e8117d928",
            "private_dns": "ip-172-31-36-35.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.35",
            "public_dns": "ec2-13-42-102-35.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.102.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e23315e9bbdcdba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo_instance"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fef6db1302035beb",
            "tags": {
              "Name": "sherlihy_dot_com-demo_instance"
            },
            "tags_all": {
              "Name": "sherlihy_dot_com-demo_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccdbe0379ee2eeb2"
            ]
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_vpc.default",
            "aws_key_pair.sherlihy_dot_com-demo_instance",
            "aws_security_group.demo_instance",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:security-group/sg-0ccdbe0379ee2eeb2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ccdbe0379ee2eeb2",
            "ingress": [],
            "name": "demo_instance",
            "name_prefix": "",
            "owner_id": "111644099040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02184bb5944b5845b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3131483558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ccdbe0379ee2eeb2",
            "security_group_rule_id": "sgr-0280aae2ccf677dc1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.demo_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-390116543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ccdbe0379ee2eeb2",
            "security_group_rule_id": "sgr-026f72c106753f157",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.demo_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2714429706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ccdbe0379ee2eeb2",
            "security_group_rule_id": "sgr-0b9a0f09c04aef188",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.demo_instance"
          ]
        }
      ]
    }
  ]
}